<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/main" />
        <item
            android:id="@+id/nav_comics"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/comics" />
        <item
            android:id="@+id/nav_videos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/shortVideos" />
        <item
            android:id="@+id/nav_memory"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/game_center" />



    </group>
</menu>