<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_cpde"
        android:layout_marginTop="50dp"
        android:layout_marginStart="16dp"
        android:textSize="22sp"
        android:textColor="@color/colorAccent"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/code"
        app:endIconMode="clear_text"
        app:boxStrokeColor="@color/colorPrimary"
        app:hintTextColor="@color/colorPrimary"
        app:boxStrokeErrorColor="@color/design_default_color_error"
        android:id="@+id/name_la">

        <com.google.android.material.textfield.TextInputEditText
            android:textCursorDrawable="@color/colorPrimary"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="#000"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:importantForAutofill="no"
            android:id="@+id/code"/>
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/send"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        app:cornerRadius="25dp"
        app:strokeColor="@color/colorPrimaryDark"
        app:strokeWidth="1dp">

    </com.google.android.material.button.MaterialButton>


</LinearLayout>