<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">



<ScrollView

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".activities.admin.AddComicActivity">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <com.google.android.material.textfield.TextInputLayout
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shop_name"
            android:textColor="#000"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:textColor="#000"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>

    </com.google.android.material.textfield.TextInputLayout>



    <RelativeLayout
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:id="@+id/file_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/select_pdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="16dp"
            android:minHeight="60dp"
            android:text="@string/select_pdf"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:backgroundTint="@color/babyBlue"
            app:cornerRadius="25dp">

        </com.google.android.material.button.MaterialButton>

    </RelativeLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/save"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="21dp"
        app:strokeColor="@color/colorPrimaryDark"
        app:strokeWidth="1dp"
        app:backgroundTint="@color/colorPrimaryDark"
        app:cornerRadius="25dp">
    </com.google.android.material.button.MaterialButton>

</LinearLayout>




</ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>