<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/babyBink"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        tools:context=".activities.LoginActivity">

        <ImageView
            android:background="@mipmap/logo1"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"/>

        <!-- Email edit text -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="#FFF5F5"
            app:boxStrokeColor="@color/primaryTextColor"
            app:hintTextColor="@color/gray"
            app:boxCornerRadiusBottomEnd="50dp"
            app:boxCornerRadiusBottomStart="50dp"
            app:boxCornerRadiusTopEnd="50dp"
            app:boxCornerRadiusTopStart="50dp"
            android:id="@+id/login_email_field">
            <com.google.android.material.textfield.TextInputEditText
                android:textCursorDrawable="@color/primaryTextColor"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/user_name"
                android:minHeight="60dp"
                android:textColor="#000"
                android:paddingStart="35dp"
                android:paddingEnd="20dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:importantForAutofill="no"
                android:id="@+id/description"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password edit text -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="password_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="#FFF5F5"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="#FFF5F5"
            app:boxCornerRadiusBottomEnd="50dp"
            app:boxCornerRadiusBottomStart="50dp"
            app:boxCornerRadiusTopEnd="50dp"
            app:boxCornerRadiusTopStart="50dp"
            android:textColor="#000"
            android:id="@+id/login_password_field">

            <com.google.android.material.textfield.TextInputEditText
                android:textCursorDrawable="@color/primaryTextColor"
                android:inputType="textPassword"
                android:maxLines="1"
                android:hint="@string/password"
                android:paddingStart="35dp"
                android:minHeight="60dp"
                android:paddingEnd="20dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/password"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="65dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/login"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            app:cornerRadius="50dp"
            app:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/white">
        </com.google.android.material.button.MaterialButton>



        <TextView
            android:padding="10dp"
            android:gravity="center"
            style="@style/viewParent"
            android:text="@string/register"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/newsMoreTextSize"
            android:id="@+id/forget_password"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

</ScrollView>