<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.admin.AddQuestionActivity">



    <RelativeLayout

        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Email edit text -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/question_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:boxStrokeColor="@color/primaryTextColor"
            app:hintTextColor="@color/primaryTextColor">
            <com.google.android.material.textfield.TextInputEditText
                android:textCursorDrawable="@color/primaryTextColor"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/question"
                android:textColor="#000"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:importantForAutofill="no"
                android:id="@+id/question"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/answers_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question_layout"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/answers_list"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="16dp"
            android:minHeight="60dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:cornerRadius="25dp"
            app:strokeColor="@color/colorPrimaryDark"
            app:strokeWidth="1dp">


        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/enter_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="21dp"
            android:minHeight="60dp"
            android:text="@string/enter_answer"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:backgroundTint="@color/colorPrimaryDark"
            app:cornerRadius="25dp"
            app:strokeColor="@color/colorPrimaryDark"
            app:strokeWidth="1dp">

        </com.google.android.material.button.MaterialButton>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>